Fixed the background image.

--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -15,7 +15,7 @@ $icon-font-path: "../../../brothers-magoo/bower_components/bootstrap-sass/assets
 // endbower
 
 body {
-  background-image: url('/assets/images/background.jpg');
+  background-image: url('../assets/images/background.jpg');
 }
 
 .responsive_image {
